# entrega-clasificador

./: .gitignore  README.md  app.py  confirm_nodes.py  docs.md  pyproject.toml
docs/: refactoring-search-architecture.md
search/: catalog.py  joiners.py
search/sources/: environmental_catalog.json  health_catalog.json
